--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "@angular/platform-browser": "^5.1.3",
     "@angular/platform-browser-dynamic": "^5.1.3",
     "@angular/router": "^5.1.3",
+    "@motionpicture/coa-service": "^4.0.8",
+    "@motionpicture/mvtk-reserve-service": "^1.2.0",
+    "@motionpicture/sskts-api-nodejs-client": "^2.1.1",
     "basic-auth": "^2.0.0",
     "body-parser": "^1.18.2",
     "connect-redis": "^3.3.3",
@@ -43,6 +46,7 @@
     "moment": "^2.20.1",
     "redis": "^2.8.0",
     "rxjs": "^5.5.6",
+    "uuid": "^3.1.0",
     "winston": "^2.4.0",
     "zone.js": "^0.8.19"
   },
@@ -65,6 +69,7 @@
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
     "@types/redis": "^2.8.4",
+    "@types/uuid": "^3.4.3",
     "@types/winston": "^2.3.7",
     "codelyzer": "^4.0.1",
     "jasmine-core": "~2.6.2",
