--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "express-validator": "^4.3.0",
+    "google-libphonenumber": "^3.0.10",
     "helmet": "^3.9.0",
     "http-status": "^1.0.1",
     "i18n": "^0.8.3",
@@ -63,6 +64,7 @@
     "@types/express": "^4.11.0",
     "@types/express-session": "^1.15.6",
     "@types/express-validator": "^3.0.0",
+    "@types/google-libphonenumber": "^7.4.13",
     "@types/helmet": "0.0.37",
     "@types/http-status": "^0.2.30",
     "@types/i18n": "^0.8.3",
