--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "start-server": "node dist/server/index",
     "start-server-ssl": "node dist/server/ssl",
     "build-server": "tsc --project src/server --outDir dist/server --locale ja-jp",
-    "build": "npm run build-sever && npm run build-client"
+    "build": "npm run build-sever && npm run build-client",
+    "version": "git add -A"
   },
   "private": true,
   "dependencies": {
