--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "helmet": "^3.9.0",
     "http-status": "^1.0.1",
     "i18n": "^0.8.3",
+    "libphonenumber-js": "^1.0.3",
     "moment": "^2.20.1",
     "redis": "^2.8.0",
     "rxjs": "^5.5.6",
