--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "test-client": "ng test --code-coverage",
     "lint-client": "ng lint",
     "e2e": "ng e2e",
+    "css-server": "npm run scss-server && postcss -c src/server/.postcssrc.json",
+    "scss-server": "node-sass src/server/public/scss --output dist/server/public/css",
     "start": "npm run start-server",
     "start-server": "node dist/server/index",
     "start-server-ssl": "node dist/server/ssl",
@@ -41,6 +43,7 @@
     "debug": "^3.1.0",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
+    "express-ejs-layouts": "^2.3.1",
     "express-session": "^1.15.6",
     "express-validator": "^4.3.0",
     "helmet": "^3.9.0",
@@ -65,6 +68,7 @@
     "@types/debug": "0.0.30",
     "@types/ejs": "^2.5.0",
     "@types/express": "^4.11.0",
+    "@types/express-ejs-layouts": "^2.3.1",
     "@types/express-session": "^1.15.6",
     "@types/express-validator": "^3.0.0",
     "@types/helmet": "0.0.37",
@@ -87,6 +91,8 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "nsp": "^3.1.0",
     "nyc": "^11.4.1",
+    "postcss": "^6.0.16",
+    "postcss-cli": "^4.1.1",
     "protractor": "~5.1.2",
     "rimraf": "^2.6.2",
     "ts-node": "^3.3.0",
