--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@motionpicture/coa-service": "^4.0.8",
     "@motionpicture/mvtk-reserve-service": "^1.2.0",
     "@motionpicture/sskts-api-nodejs-client": "^2.1.1",
+    "aws-sdk": "^2.188.0",
     "basic-auth": "^2.0.0",
     "body-parser": "^1.18.2",
     "connect-redis": "^3.3.3",
