--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "i18n": "^0.8.3",
     "libphonenumber-js": "^1.0.7",
     "moment": "^2.20.1",
+    "moment-timezone": "^0.5.14",
     "redis": "^2.8.0",
     "rxjs": "^5.5.6",
     "uuid": "^3.2.1",
@@ -79,6 +80,7 @@
     "@types/i18n": "^0.8.3",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
+    "@types/moment-timezone": "^0.5.4",
     "@types/node": "~9.4.0",
     "@types/redis": "^2.8.5",
     "@types/uuid": "^3.4.3",
