--- a/package.json
+++ b/package.json
@@ -24,20 +24,20 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.3",
-    "@angular/common": "^5.2.3",
-    "@angular/compiler": "^5.2.3",
-    "@angular/core": "^5.2.3",
-    "@angular/forms": "^5.2.3",
-    "@angular/http": "^5.2.3",
-    "@angular/platform-browser": "^5.2.3",
-    "@angular/platform-browser-dynamic": "^5.2.3",
-    "@angular/router": "^5.2.3",
-    "@motionpicture/coa-service": "^4.0.8",
+    "@angular/animations": "^5.2.5",
+    "@angular/common": "^5.2.5",
+    "@angular/compiler": "^5.2.5",
+    "@angular/core": "^5.2.5",
+    "@angular/forms": "^5.2.5",
+    "@angular/http": "^5.2.5",
+    "@angular/platform-browser": "^5.2.5",
+    "@angular/platform-browser-dynamic": "^5.2.5",
+    "@angular/router": "^5.2.5",
+    "@motionpicture/coa-service": "^4.0.9",
     "@motionpicture/mvtk-reserve-service": "^1.2.0",
-    "@motionpicture/sskts-api-javascript-client": "^2.1.1",
-    "@motionpicture/sskts-api-nodejs-client": "^2.1.1",
-    "aws-sdk": "^2.188.0",
+    "@motionpicture/sskts-api-javascript-client": "^2.1.2",
+    "@motionpicture/sskts-api-nodejs-client": "^2.1.2",
+    "aws-sdk": "^2.195.0",
     "basic-auth": "^2.0.0",
     "body-parser": "^1.18.2",
     "connect-redis": "^3.3.3",
@@ -49,10 +49,10 @@
     "express-ejs-layouts": "^2.3.1",
     "express-session": "^1.15.6",
     "express-validator": "^4.3.0",
-    "helmet": "^3.10.0",
+    "helmet": "^3.11.0",
     "http-status": "^1.0.1",
     "i18n": "^0.8.3",
-    "libphonenumber-js": "^1.0.7",
+    "libphonenumber-js": "^1.0.24",
     "moment": "^2.20.1",
     "moment-timezone": "^0.5.14",
     "redis": "^2.8.0",
@@ -62,9 +62,9 @@
     "zone.js": "^0.8.20"
   },
   "devDependencies": {
-    "@angular/cli": "^1.6.7",
-    "@angular/compiler-cli": "^5.2.3",
-    "@angular/language-service": "^5.2.3",
+    "@angular/cli": "^1.6.8",
+    "@angular/compiler-cli": "^5.2.5",
+    "@angular/language-service": "^5.2.5",
     "@types/basic-auth": "^1.1.2",
     "@types/body-parser": "^1.16.8",
     "@types/connect-redis": "0.0.7",
@@ -73,7 +73,7 @@
     "@types/ejs": "^2.5.0",
     "@types/express": "^4.11.0",
     "@types/express-ejs-layouts": "^2.3.1",
-    "@types/express-session": "^1.15.6",
+    "@types/express-session": "^1.15.8",
     "@types/express-validator": "^3.0.0",
     "@types/helmet": "0.0.37",
     "@types/http-status": "^0.2.30",
@@ -81,11 +81,11 @@
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/moment-timezone": "^0.5.4",
-    "@types/node": "~9.4.0",
+    "@types/node": "^9.4.6",
     "@types/redis": "^2.8.5",
     "@types/uuid": "^3.4.3",
-    "@types/winston": "^2.3.7",
-    "autoprefixer": "^7.2.5",
+    "@types/winston": "^2.3.8",
+    "autoprefixer": "^7.2.6",
     "codelyzer": "^4.1.0",
     "jasmine-core": "~2.9.1",
     "jasmine-spec-reporter": "~4.2.1",
@@ -96,7 +96,7 @@
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
     "nsp": "^3.1.0",
-    "nyc": "^11.4.1",
+    "nyc": "^11.5.0",
     "postcss": "^6.0.16",
     "postcss-cli": "^4.1.1",
     "protractor": "~5.3.0",
