--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "3.0.1",
   "scripts": {
     "ng": "ng",
-    "start-client": "ng serve --environment=local",
+    "build-client-local": "ng build --environment=local --output-path=./dist/client/development --aot",
     "build-client": "npm run build-client-development && npm run build-client-test && npm run build-client-production",
     "build-client-development": "ng build --environment=dev --output-path=./dist/client/development --aot",
     "build-client-test": "ng build --environment=test --output-path=./dist/client/test --aot",
@@ -15,7 +15,7 @@
     "scss-server": "node-sass src/server/public/scss --output dist/server/public/css",
     "start": "npm run start-server",
     "start-server": "node dist/server/index",
-    "start-server-ssl": "node dist/server/ssl",
+    "ssl": "node dist/server/ssl",
     "build-server": "tsc --project src/server --outDir dist/server --locale ja-jp",
     "lint-server": "tslint --config tslint.json src/server/**/**.ts --exclude **/**.spec.ts --project src/server/tsconfig.json",
     "build": "npm run css-server && npm run build-server && npm run build-client",
