--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "ssl": "node dist/server/ssl",
     "build-server": "tsc --project src/server --outDir dist/server --locale ja-jp",
     "lint-server": "tslint --config tslint.json src/server/**/**.ts --exclude **/**.spec.ts --project src/server/tsconfig.json",
-    "build": "npm run css-server && npm run build-server && npm run build-client",
+    "build": "npm run lint && npm run css-server && npm run build-server && npm run build-client",
     "version": "git add -A",
-    "preversion": "npm run build"
+    "preversion": "npm run build",
+    "lint": "npm run lint-client && npm run lint-server"
   },
   "private": true,
   "dependencies": {
