--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "3.1.1",
   "scripts": {
     "ng": "ng",
-    "build-client-local": "ng build --environment=local --output-path=./dist/client/development --aot",
+    "build-client-local": "ng build --environment=local --output-path=./dist/client/development",
     "build-client": "npm run build-client-development && npm run build-client-test && npm run build-client-production",
     "build-client-development": "ng build --environment=dev --output-path=./dist/client/development --aot",
     "build-client-test": "ng build --environment=test --output-path=./dist/client/test --aot",
@@ -34,7 +34,7 @@
     "@angular/platform-browser": "^5.2.11",
     "@angular/platform-browser-dynamic": "^5.2.11",
     "@angular/router": "^5.2.11",
-    "@motionpicture/coa-service": "^4.0.11",
+    "@motionpicture/coa-service": "^4.1.0-alpha.0",
     "@motionpicture/mvtk-reserve-service": "^1.2.0",
     "@motionpicture/sskts-api-javascript-client": "^3.1.0-alpha.5",
     "@motionpicture/sskts-api-nodejs-client": "^3.1.0-alpha.3",
