--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "4.1.0",
   "scripts": {
     "ng": "ng",
-    "build-client-local": "ng build --environment=local --output-path=./dist/client/development",
     "build-client": "npm run build-client-development && npm run build-client-test && npm run build-client-production",
-    "build-client-development": "ng build --environment=dev --output-path=./dist/client/development --aot",
-    "build-client-test": "ng build --environment=test --output-path=./dist/client/test --aot",
-    "build-client-production": "ng build --environment=prod --output-path=./dist/client/production --aot",
+    "build-client-local": "ng build --configuration=local",
+    "build-client-development": "ng build --configuration=dev",
+    "build-client-test": "ng build --configuration=test",
+    "build-client-production": "ng build --configuration=production",
     "test-client": "ng test --code-coverage",
     "lint-client": "tslint --config tslint.json src/client/**/**.ts --exclude **/**.spec.ts --project src/client/tsconfig.json",
     "e2e": "ng e2e",
@@ -27,25 +27,25 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.11",
-    "@angular/common": "^5.2.11",
-    "@angular/compiler": "^5.2.11",
-    "@angular/core": "^5.2.11",
-    "@angular/forms": "^5.2.11",
-    "@angular/http": "^5.2.11",
-    "@angular/platform-browser": "^5.2.11",
-    "@angular/platform-browser-dynamic": "^5.2.11",
-    "@angular/router": "^5.2.11",
-    "@motionpicture/coa-service": "^4.1.0-alpha.0",
+    "@angular/animations": "^6.0.7",
+    "@angular/common": "^6.0.7",
+    "@angular/compiler": "^6.0.7",
+    "@angular/core": "^6.0.7",
+    "@angular/forms": "^6.0.7",
+    "@angular/http": "^6.0.7",
+    "@angular/platform-browser": "^6.0.7",
+    "@angular/platform-browser-dynamic": "^6.0.7",
+    "@angular/router": "^6.0.7",
+    "@motionpicture/coa-service": "^4.1.0",
     "@motionpicture/mvtk-reserve-service": "^1.2.0",
-    "@motionpicture/sskts-api-javascript-client": "^3.1.0",
-    "@motionpicture/sskts-api-nodejs-client": "^3.1.0",
-    "aws-sdk": "^2.245.1",
+    "@motionpicture/sskts-api-javascript-client": "^3.3.0",
+    "@motionpicture/sskts-api-nodejs-client": "^3.3.0",
+    "aws-sdk": "^2.266.1",
     "basic-auth": "^2.0.0",
     "body-parser": "^1.18.3",
     "connect-redis": "^3.3.3",
     "cookie-parser": "^1.4.3",
-    "core-js": "^2.5.6",
+    "core-js": "^2.5.7",
     "debug": "^3.1.0",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
@@ -53,59 +53,61 @@
     "express-session": "^1.15.6",
     "express-validator": "^4.3.0",
     "helmet": "^3.12.1",
-    "http-status": "^1.0.1",
+    "http-status": "^1.2.0",
     "i18n": "^0.8.3",
-    "libphonenumber-js": "^1.2.12",
-    "moment": "^2.22.1",
-    "moment-timezone": "^0.5.17",
+    "libphonenumber-js": "^1.2.15",
+    "moment": "^2.22.2",
+    "moment-timezone": "^0.5.21",
     "redis": "^2.8.0",
-    "rxjs": "^5.5.11",
-    "uuid": "^3.2.1",
-    "winston": "^2.4.2",
+    "rxjs": "^6.2.1",
+    "rxjs-compat": "^6.0.0-rc.0",
+    "uuid": "^3.3.2",
+    "winston": "^2.4.3",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "^1.7.4",
-    "@angular/compiler-cli": "^5.2.11",
-    "@angular/language-service": "^5.2.11",
+    "@angular/cli": "^6.0.8",
+    "@angular/compiler-cli": "^6.0.7",
+    "@angular/language-service": "^6.0.7",
     "@types/basic-auth": "^1.1.2",
     "@types/body-parser": "^1.17.0",
     "@types/connect-redis": "0.0.7",
     "@types/cookie-parser": "^1.4.1",
     "@types/debug": "0.0.30",
-    "@types/ejs": "^2.5.1",
-    "@types/express": "^4.11.0",
+    "@types/ejs": "^2.6.0",
+    "@types/express": "^4.16.0",
     "@types/express-ejs-layouts": "^2.3.1",
-    "@types/express-session": "^1.15.8",
+    "@types/express-session": "^1.15.10",
     "@types/express-validator": "^3.0.0",
     "@types/helmet": "0.0.37",
     "@types/http-status": "^0.2.30",
     "@types/i18n": "^0.8.3",
-    "@types/jasmine": "^2.8.7",
+    "@types/jasmine": "^2.8.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/moment-timezone": "^0.5.5",
-    "@types/node": "^9.6.18",
+    "@types/moment-timezone": "^0.5.6",
+    "@types/node": "^9.6.22",
     "@types/redis": "^2.8.6",
     "@types/uuid": "^3.4.3",
     "@types/winston": "^2.3.9",
     "autoprefixer": "^7.2.6",
-    "codelyzer": "^4.3.0",
+    "codelyzer": "^4.4.2",
     "jasmine-core": "~2.9.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^2.0.2",
+    "karma": "^2.0.4",
     "karma-chrome-launcher": "~2.2.0",
     "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "^1.4.3",
     "karma-jasmine": "^1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "nsp": "^3.2.1",
-    "nyc": "^11.8.0",
-    "postcss": "^6.0.22",
+    "nyc": "^11.9.0",
+    "postcss": "^6.0.23",
     "postcss-cli": "^4.1.1",
     "protractor": "^5.3.2",
     "rimraf": "^2.6.2",
     "ts-node": "^4.1.0",
     "tslint": "^5.10.0",
-    "typescript": "^2.8.3"
+    "typescript": "^2.9.2",
+    "@angular-devkit/build-angular": "~0.6.8"
   }
 }
