--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@motionpicture/mvtk-reserve-service": "^1.2.0",
     "@motionpicture/sskts-api-javascript-client": "^3.3.0",
     "@motionpicture/sskts-api-nodejs-client": "^3.3.0",
-    "aws-sdk": "^2.266.1",
+    "aws-sdk": "2.176.0",
     "basic-auth": "^2.0.0",
     "body-parser": "^1.18.3",
     "connect-redis": "^3.3.3",
