--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "4.1.0",
   "scripts": {
     "ng": "ng",
-    "build-client": "npm run build-client-development && npm run build-client-test && npm run build-client-production",
+    "build-client": "npm run build-client-development",
     "build-client-local": "ng build --configuration=local",
     "build-client-development": "ng build --configuration=dev",
     "build-client-test": "ng build --configuration=test",
@@ -23,7 +23,8 @@
     "preversion": "npm run build",
     "check": "npm run lint && nsp check",
     "lint": "npm run lint-client && npm run lint-server",
-    "test": "npm run check"
+    "test": "npm run check",
+    "update-mocoin": "npm install  @mocoin/api-nodejs-client@next @mocoin/api-javascript-client@next"
   },
   "private": true,
   "dependencies": {
@@ -36,11 +37,13 @@
     "@angular/platform-browser": "^6.0.7",
     "@angular/platform-browser-dynamic": "^6.0.7",
     "@angular/router": "^6.0.7",
+    "@mocoin/api-javascript-client": "0.0.0-alpha.4",
+    "@mocoin/api-nodejs-client": "0.0.0-alpha.4",
     "@motionpicture/coa-service": "^4.1.0",
     "@motionpicture/mvtk-reserve-service": "^1.2.0",
-    "@motionpicture/sskts-api-javascript-client": "^3.3.0",
-    "@motionpicture/sskts-api-nodejs-client": "^3.3.0",
-    "aws-sdk": "2.176.0",
+    "@motionpicture/sskts-api-javascript-client": "^3.4.0-mocoin.0",
+    "@motionpicture/sskts-api-nodejs-client": "^3.4.0-mocoin.0",
+    "aws-sdk": "^2.176.0",
     "basic-auth": "^2.0.0",
     "body-parser": "^1.18.3",
     "connect-redis": "^3.3.3",
