--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
     "@angular/platform-browser": "^6.0.7",
     "@angular/platform-browser-dynamic": "^6.0.7",
     "@angular/router": "^6.0.7",
-    "@mocoin/api-javascript-client": "0.0.0-alpha.4",
-    "@mocoin/api-nodejs-client": "0.0.0-alpha.4",
+    "@mocoin/api-javascript-client": "0.0.0-alpha.5",
+    "@mocoin/api-nodejs-client": "0.0.0-alpha.5",
     "@motionpicture/coa-service": "^4.1.0",
     "@motionpicture/mvtk-reserve-service": "^1.2.0",
     "@motionpicture/sskts-api-javascript-client": "^3.4.0-mocoin.0",
@@ -69,6 +69,7 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~0.6.8",
     "@angular/cli": "^6.0.8",
     "@angular/compiler-cli": "^6.0.7",
     "@angular/language-service": "^6.0.7",
@@ -110,7 +111,6 @@
     "rimraf": "^2.6.2",
     "ts-node": "^4.1.0",
     "tslint": "^5.10.0",
-    "typescript": "^2.9.2",
-    "@angular-devkit/build-angular": "~0.6.8"
+    "typescript": "^3.0.1"
   }
 }
