--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~0.6.8",
     "@angular/cli": "^6.0.8",
     "@angular/compiler-cli": "^6.0.7",
     "@angular/language-service": "^6.0.7",
@@ -99,6 +100,7 @@
     "karma-coverage-istanbul-reporter": "^1.4.3",
     "karma-jasmine": "^1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "node-sass": "^4.9.4",
     "nsp": "^3.2.1",
     "nyc": "^11.9.0",
     "postcss": "^6.0.23",
@@ -107,7 +109,6 @@
     "rimraf": "^2.6.2",
     "ts-node": "^4.1.0",
     "tslint": "^5.10.0",
-    "typescript": "^2.9.2",
-    "@angular-devkit/build-angular": "~0.6.8"
+    "typescript": "^2.9.2"
   }
 }
