--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "build": "npm run css-server && npm run build-server && npm run build-client",
     "version": "git add -A",
     "preversion": "npm run build",
-    "check": "npm run lint && nsp check",
+    "check": "npm run lint",
     "lint": "npm run lint-client && npm run lint-server",
     "test": "npm run check"
   },
@@ -101,7 +101,6 @@
     "karma-jasmine": "^1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "node-sass": "^4.9.4",
-    "nsp": "^3.2.1",
     "nyc": "^11.9.0",
     "postcss": "^6.0.23",
     "postcss-cli": "^4.1.1",
