--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@angular/platform-browser": "^6.0.7",
     "@angular/platform-browser-dynamic": "^6.0.7",
     "@angular/router": "^6.0.7",
-    "@motionpicture/coa-service": "^6.0.1",
+    "@motionpicture/coa-service": "^7.0.0-alpha.0",
     "@motionpicture/mvtk-reserve-service": "^1.2.1",
     "@motionpicture/sskts-api-javascript-client": "^8.0.1",
     "@motionpicture/sskts-api-nodejs-client": "^8.0.1",
