--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "libphonenumber-js": "^1.7.25",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.26",
+    "qrcode": "^1.4.2",
     "redis": "^2.8.0",
     "rxjs": "^6.5.3",
     "rxjs-compat": "^6.5.3",
@@ -89,6 +90,7 @@
     "@types/jasminewd2": "~2.0.8",
     "@types/moment-timezone": "^0.5.12",
     "@types/node": "^8.10.54",
+    "@types/qrcode": "^1.3.4",
     "@types/redis": "^2.8.14",
     "@types/uuid": "^3.4.5",
     "@types/winston": "^2.3.9",
