--- a/package.json
+++ b/package.json
@@ -36,10 +36,10 @@
     "@angular/platform-browser": "^8.2.8",
     "@angular/platform-browser-dynamic": "^8.2.8",
     "@angular/router": "^8.2.8",
+    "@cinerino/api-javascript-client": "^2.0.0-alpha.45",
+    "@cinerino/api-nodejs-client": "^2.0.0-alpha.47",
     "@motionpicture/coa-service": "^7.0.0",
     "@motionpicture/mvtk-reserve-service": "^1.3.0",
-    "@motionpicture/sskts-api-javascript-client": "^8.0.1",
-    "@motionpicture/sskts-api-nodejs-client": "^8.0.1",
     "aws-sdk": "^2.540.0",
     "basic-auth": "^2.0.1",
     "body-parser": "^1.19.0",
