--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test-client": "ng test --code-coverage",
     "lint-client": "tslint --config tslint.json src/client/**/**.ts --exclude **/**.spec.ts --project src/client/tsconfig.json",
     "e2e": "ng e2e",
-    "css-server": "npm run scss-server && postcss public/css/**/*.css -u autoprefixer -d public/css",
+    "css-server": "npm rebuild node-sass && npm run scss-server && postcss public/css/**/*.css -u autoprefixer -d public/css",
     "scss-server": "node-sass public/scss --output public/css",
     "start": "npm run start-server",
     "start-server": "node dist/server/index",
