--- a/angular.json
+++ b/angular.json
@@ -11,6 +11,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "sourceMap": false,
             "outputPath": "dist/client",
             "index": "src/client/index.html",
             "main": "src/client/main.ts",
@@ -29,6 +30,7 @@
           },
           "configurations": {
             "local": {
+              "aot": true,
               "outputPath": "./dist/client/development",
               "watch": true
             },
