--- a/src/client/tsconfig.app.json
+++ b/src/client/tsconfig.app.json
@@ -10,6 +10,7 @@
     "**/*.spec.ts"
   ],
   "angularCompilerOptions": {
-    "disableTypeScriptVersionCheck": true
+    "disableTypeScriptVersionCheck": true,
+    "fullTemplateTypeCheck": true
   }
 }
