--- a/package.json
+++ b/package.json
@@ -36,8 +36,7 @@
     "@angular/platform-browser": "^8.2.8",
     "@angular/platform-browser-dynamic": "^8.2.8",
     "@angular/router": "^8.2.8",
-    "@cinerino/api-javascript-client": "^2.0.0-alpha.75",
-    "@cinerino/api-nodejs-client": "^2.0.0-alpha.75",
+    "@cinerino/sdk": "^1.4.0",
     "@motionpicture/coa-service": "^7.0.0",
     "@motionpicture/mvtk-reserve-service": "^1.3.0",
     "aws-sdk": "^2.540.0",
