--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "@angular/platform-browser": "^8.2.8",
     "@angular/platform-browser-dynamic": "^8.2.8",
     "@angular/router": "^8.2.8",
-    "@cinerino/sdk": "^1.4.0",
-    "@motionpicture/coa-service": "^7.0.0",
+    "@cinerino/sdk": "^1.12.0",
+    "@motionpicture/coa-service": "^9.0.0-alpha.0",
     "@motionpicture/mvtk-reserve-service": "^1.3.0",
     "aws-sdk": "^2.540.0",
     "basic-auth": "^2.0.1",
