--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@angular/platform-browser-dynamic": "^8.2.8",
     "@angular/router": "^8.2.8",
     "@cinerino/sdk": "^1.12.0",
-    "@motionpicture/coa-service": "^9.0.0-alpha.0",
+    "@motionpicture/coa-service": "^9.0.0",
     "@motionpicture/mvtk-reserve-service": "^1.3.0",
     "aws-sdk": "^2.540.0",
     "basic-auth": "^2.0.1",
