--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@angular/platform-browser": "^8.2.8",
     "@angular/platform-browser-dynamic": "^8.2.8",
     "@angular/router": "^8.2.8",
-    "@cinerino/sdk": "^1.12.0",
+    "@cinerino/sdk": "^1.16.3",
     "@motionpicture/coa-service": "^9.0.0",
     "@motionpicture/mvtk-reserve-service": "^1.3.0",
     "aws-sdk": "^2.540.0",
@@ -94,6 +94,7 @@
     "@types/node": "^8.10.54",
     "@types/qrcode": "^1.3.4",
     "@types/redis": "^2.8.14",
+    "@types/request-promise-native": "^1.0.17",
     "@types/uuid": "^3.4.5",
     "@types/winston": "^2.3.9",
     "autoprefixer": "^9.6.1",
@@ -114,6 +115,6 @@
     "rimraf": "^3.0.0",
     "ts-node": "^8.4.1",
     "tslint": "^5.20.0",
-    "typescript": "^3.6.3"
+    "typescript": "^3.5.3"
   }
 }
