--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "aws-sdk": "^2.540.0",
     "basic-auth": "^2.0.1",
     "body-parser": "^1.19.0",
+    "bootstrap": "^4.3.1",
     "connect-redis": "^4.0.3",
     "cookie-parser": "^1.4.4",
     "core-js": "^3.2.1",
@@ -57,6 +58,7 @@
     "libphonenumber-js": "^1.7.25",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.26",
+    "ngx-bootstrap": "^5.6.2",
     "qrcode": "^1.4.2",
     "redis": "^2.8.0",
     "rxjs": "^6.5.3",
