--- a/package.json
+++ b/package.json
@@ -36,14 +36,13 @@
     "@angular/platform-browser": "^8.2.8",
     "@angular/platform-browser-dynamic": "^8.2.8",
     "@angular/router": "^8.2.8",
-    "@cinerino/sdk": "^1.16.3",
+    "@cinerino/sdk": "3.2.0",
     "@motionpicture/coa-service": "^9.0.0",
     "@motionpicture/mvtk-reserve-service": "^1.3.0",
     "aws-sdk": "^2.540.0",
     "basic-auth": "^2.0.1",
-    "body-parser": "^1.19.0",
-    "bootstrap": "^4.3.1",
-    "connect-redis": "^4.0.3",
+    "bootstrap": "^4.6.0",
+    "connect-redis": "^6.0.0",
     "cookie-parser": "^1.4.4",
     "core-js": "^3.2.1",
     "debug": "^4.1.1",
@@ -60,7 +59,7 @@
     "moment-timezone": "^0.5.26",
     "ngx-bootstrap": "^5.6.2",
     "qrcode": "^1.4.2",
-    "redis": "^2.8.0",
+    "redis": "^3.1.2",
     "rxjs": "^6.5.3",
     "rxjs-compat": "^6.5.3",
     "stream": "0.0.2",
@@ -95,7 +94,7 @@
     "@types/moment-timezone": "^0.5.12",
     "@types/node": "^8.10.54",
     "@types/qrcode": "^1.3.4",
-    "@types/redis": "^2.8.14",
+    "@types/redis": "^2.8.29",
     "@types/request-promise-native": "^1.0.17",
     "@types/uuid": "^3.4.5",
     "@types/winston": "^2.3.9",
